--- a/first-gradle-project/build.gradle
+++ b/first-gradle-project/build.gradle
@@ -22,5 +22,7 @@ jar {
 
 
 dependencies {
+    compile 'org.slf4j:jcl-over-slf4j:1.7.12'
+    compile 'ch.qos.logback:logback-classic:1.1.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
